--- a/_client/css/App.css
+++ b/_client/css/App.css
@@ -1,10 +1,17 @@
+* {
+	box-sizing: border-box;
+}
+
 html,
 body {
-    margin: 0;
-    padding: 0;
-    background: #212733;
-    color: #ccc9c2;
-    padding-left: 50px;
-    font-family: "Open Sans", sans-serif;
-    font-size: 14px;
+	margin: 0;
+	padding: 0;
+	font-family: "Open Sans", sans-serif;
+	font-size: 14px;
+}
+
+#app {
+	position: absolute;
+	height: 100%;
+	width: 100%;
 }
